# MMD-MPL

./: Cargo.toml  README.md  package-lock.json  package.json
pkg/: README.md  mmd_mpl.d.ts  mmd_mpl.js  mmd_mpl_bg.js  mmd_mpl_bg.wasm  mmd_mpl_bg.wasm.d.ts  mpl_compiler.d.ts  mpl_compiler.js  mpl_compiler_bg.wasm  mpl_compiler_bg.wasm.d.ts  package.json
public/models/深空之眼-梵天/: 深空之眼-梵天.pmx
src/: animation.rs  bone.rs  compiler.rs  lib.rs  main.rs  mpl.ts  pose.rs  utils.rs  vmd.rs
src/app/: layout.tsx
src/components/: chat-input.tsx  clothes-panel.tsx  customize-panel.tsx  main-scene.tsx  mpl-input.tsx
src/lib/: mpl.ts  pose.ts
web/: README.md  package-lock.json  package.json
web/hooks/: useMPLCompiler.ts
web/src/components/: code-editor.tsx  main-scene.tsx  mpl-input.tsx
web/src/lib/: mpl.ts
